--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-
+  <title>Matic Timesheet Tracker</title>
 
   <base href="/">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,7 +14,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
-    
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -25,16 +26,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function () {
-      $('[data-toggle="popover"]').popover();
-
-    });
-  </script>
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>Registration</app-root>
 </body>
 
 </html>
